# FLIR-App

./: .gitignore  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: build.gradle
usbCameraCommon/: build.gradle
usbCameraCommon/gradle/wrapper/: gradle-wrapper.properties
usbCameraTest/: CMakeLists.txt  build.gradle
usbCameraTest/gradle/wrapper/: gradle-wrapper.properties
usbCameraTest/src/main/: AndroidManifest.xml
usbCameraTest/src/main/cpp/: native-lib.cpp
usbCameraTest/src/main/java/com/serenegiant/activities/: MainActivity.java
usbCameraTest/src/main/java/com/serenegiant/main/: Constants.java
usbCameraTest/src/main/java/com/serenegiant/services/: Assetbridge.java  Server.java
usbCameraTest/src/main/java/com/serenegiant/usbcameratest/: MainActivity.java
usbCameraTest/src/main/res/layout/: activity_main.xml
usbCameraTest/src/main/res/values/: strings.xml
